--- a/.github/workflows/scaffold_pkg_via_pull_request_assignment.yml
+++ b/.github/workflows/scaffold_pkg_via_pull_request_assignment.yml
@@ -171,7 +171,14 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            Based off the `README.md` file, the [stdlib-bot](https://github.com/stdlib-bot) has generated contents for the [${{ steps.scaffold.outputs.alias }}](../tree/${{ steps.scaffold.outputs.path }}/${{ steps.scaffold.outputs.dir }}) package.
+            Based off the `README.md` file, the [stdlib-bot](https://github.com/stdlib-bot) has generated contents for the [${{ steps.scaffold.outputs.alias }}](../tree/scaffold-${{ github.event.pull_request.number }}/${{ steps.scaffold.outputs.path }}/${{ steps.scaffold.outputs.dir }}) package.
+
+            From your local fork, make sure you are on the pull request branch and then merge the changes from the upstream repository:
+
+            ```bash
+             git checkout {{ github.event.pull_request.head.ref }}
+             git merge upstream/scaffold-${{ github.event.pull_request.number }}/${{ steps.scaffold.outputs.path }}
+             ```
 
             ## Notes
 
