--- a/.github/workflows/linux_test_install.yml
+++ b/.github/workflows/linux_test_install.yml
@@ -21,9 +21,9 @@ name: linux_test_install
 
 # Workflow triggers:
 on:
-  push:
-    branches:
-      - develop
+  # Run nightly:
+  schedule:
+    - cron: '0 9 * * *'
 
   # Allow the workflow to be manually run:
   workflow_dispatch:
