--- a/.github/workflows/macos_test.yml
+++ b/.github/workflows/macos_test.yml
@@ -21,27 +21,9 @@ name: macos_test
 
 # Workflow triggers:
 on:
-  push:
-    branches:
-      - develop
-    paths:
-      # List paths for which changes should trigger this workflow:
-      - 'lib/**/bin/**'
-      - 'lib/**/data/**'
-      - 'lib/**/etc/**'
-      - 'lib/**/include/**'
-      - 'lib/**/lib/**'
-      - 'lib/**/src/**'
-      - 'lib/**/test/**'
-
-      - 'lib/**/*.gyp'
-      - 'lib/**/*.gypi'
-      - 'lib/**/manifest.json'
-
-      - 'package.json'
-
-      # List paths for which changes should *not* trigger this workflow:
-      - '!lib/**/_tools/**'
+  # Run nightly:
+  schedule:
+    - cron: '0 9 * * *'
 
   # Allow the workflow to be manually run:
   workflow_dispatch:
