--- a/.github/workflows/check_required_files.yml
+++ b/.github/workflows/check_required_files.yml
@@ -44,6 +44,9 @@ jobs:
           # Specify whether to remove untracked files before checking out the repository:
           clean: true
 
+          # Refers to the development branch:
+          ref: 'develop'
+
           # Refers to the repository name of the pull request:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
 
