--- a/.github/workflows/check_required_files.yml
+++ b/.github/workflows/check_required_files.yml
@@ -160,52 +160,50 @@ jobs:
               checkbox_list+="-   [x] ${file}"
             fi
             # Add a newline to the Markdown list of checkboxes:
-            checkbox_list+=$'\n'
+            checkbox_list+="
+            "
           done
 
           # Add the list of missing and required files to the workflow output:
           echo "::set-output name=missing_files::${missing_files[*]}"
           echo "::set-output name=required_files::${required_files[*]}"
 
-          # Add the Markdown list of checkboxes to the workflow output after escaping to preserve newlines:
-          checkbox_list="${checkbox_list//'%'/'%25'}"
-          checkbox_list="${checkbox_list//$'\\n'/'%0A'}"
-          checkbox_list="${checkbox_list//$'\\r'/'%0D'}"
-          echo "::set-output name=checkbox_list::${checkbox_list}"
+          body=""
+          if [[ "${#missing_files[@]}" -eq 0 ]]; then
+            body="Hi @${{ github.event.pull_request.user.login }}, thank you for your contribution!
+
+            :tada: Your pull request contains all required files for the new package: :tada:
+
+            ${checkbox_list}
+
+            -- stdlib-bot"
+          else
+            body="Hi @${{ github.event.pull_request.user.login }}, thank you for your contribution! Your pull request contains a new package, but is missing some of the required files.
+
+            Use the following checklist to keep track of the required files and which ones are still missing:
+
+            ${checkbox_list}
+
+            Please add the missing files to the pull request.
+
+            -- stdlib-bot"
+          fi
+
+          # Add the comment body to the workflow output after escaping to preserve newlines:
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
+          echo "::set-output name=comment-body::${body}"
 
         shell: bash
         timeout-minutes: 10
 
-      # Create a comment on the pull request informing the user that the pull request contains all required files:
-      - name: 'Create a comment on the pull request informing the user that the pull request contains all required files'
+      # Create a comment on the pull request informing the user whether the pull request is missing required files:
+      - name: 'Create a comment on the pull request informing the user whether the pull request is missing required files'
         uses: peter-evans/create-or-update-comment@v1
-        if: steps.check-required-files.outputs.missing_files == ''
         with:
           # Specify the issue or pull request number:
           issue-number: ${{ github.event.pull_request.number }}
 
           # Specify the comment body:
-          body: |
-            ### :white_check_mark: Success
-
-            Pull request contains all required files.
-
-      # Create a comment on the pull request alerting the user that the pull request is missing required files:
-      - name: 'Create a comment on the pull request alerting the user that the pull request is missing required file'
-        uses: peter-evans/create-or-update-comment@v1
-        if: steps.check-required-files.outputs.missing_files != ''
-        with:
-          # Specify the issue or pull request number:
-          issue-number: ${{ github.event.pull_request.number }}
-
-          # Specify the comment body:
-          body: |
-            Hi @${{ github.event.pull_request.user.login }}. The pull request contains a new `README.md` file, but is missing some of the required files.
-
-            Use the following checklist to keep track of the required files and which ones are still missing:
-
-            ${{ steps.check-required-files.outputs.checkbox_list }}
-
-            Please add the missing files to the pull request.
-
-            -- stdlib-bot
+          body: ${{ steps.check-required-files.outputs.comment-body }}
