Also run workflow for pull requests

--- a/.github/workflows/lint_changed_files.yml
+++ b/.github/workflows/lint_changed_files.yml
@@ -24,6 +24,11 @@ on:
   push:
     branches:
       - develop
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 # Workflow jobs:
 jobs:
