--- a/.github/workflows/run_affected_tests.yml
+++ b/.github/workflows/run_affected_tests.yml
@@ -101,7 +101,7 @@ jobs:
           all_changed="${{ steps.changed-directories.outputs.all_changed_files }}"
 
           # Find unique package directories:
-          directories=$(echo "${directories}" | tr ' ' '\n' | sed -E 's/\/(bin|data|etc|include|lib|src|test)\/?$//' | uniq)
+          directories=$(echo "${all_changed}" | tr ' ' '\n' | sed -E 's/\/(bin|data|etc|include|lib|src|test)\/?$//' | uniq)
 
           # Find all test files in changed packages:
           files=$(find ${directories} -wholename '**/test/test*.js' | grep -v '/fixtures/' | tr '\n' ' ')
