--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -369,6 +369,11 @@ jobs:
             make lint-license-headers-files FILES="${files}"
           fi
 
+      # Disable Git hooks:
+      - name: 'Disable Git hooks'
+        run: |
+          rm -rf .git/hooks
+
       # Create a pull request with the fixes (if applicable):
       - name: 'Create pull request'
         if: ${{ github.event.inputs.fix }} && ( success() || failure() )
